--- a/infrastructure/01.md
+++ b/infrastructure/01.md
@@ -89,9 +89,9 @@ Later in this lab, you will use the Automated Integration Runtime (IR) to copy d
 
     ![The data hub is selected.](media/data-hub.png "Data hub")
 
-9. Select the **Workspace** tab, expand **Databases**, expand the **aiaddw** SQL pool, and expand **Tables**. You will see the `DelaySummary` table. If it does not appear, select **Refresh**.
+9. Select the **Workspace** tab, expand **SQL Databases**, expand the **aiaddw** SQL pool, and expand **Tables**. You will see the `DelaySummary` table. If it does not appear, select **Refresh**.
 
-    ![The DelaySummary table is displayed.](media/delaysummary-table.png "DelaySummary table")
+    ![The DelaySummary table is displayed.](media/ex1tsk2stp9.png "DelaySummary table")
 
 
 Click on **Next** in the below to proceed with the lab.
