--- a/infrastructure/03.md
+++ b/infrastructure/03.md
@@ -112,6 +112,8 @@ If you were able to create a Power BI workspace, you can continue with this task
     ![The form is configured as described.](media/new-linked-service-pbi-form.png "New linked service (Power BI)")
 
     > If the new Power BI workspace is not displayed, the tenant to which the AD account belongs and the tenant where the Power BI workspace is created may be different.
+ 
+4. Click on **Publish all** and select **Publish**.
 
 ### Task 6: Create a Power BI dataset (optional)
 
