--- a/infrastructure/06.md
+++ b/infrastructure/06.md
@@ -55,7 +55,7 @@ In this task, you will use the `SensorPrep.ipynb` notebook in the `source/ETLand
 
 5. With **Cell 2** selected, press **Shift+Enter**. The contents of **Cell 2** will run and the cursor moves to **Cell 3**. Similarly, press **Ctrl+Enter** to run the selected cell and remain there without moving on to the next cell.
 
-    ![Cell 2 is highlighted.](https://github.com/anushabc/azure-synapse-in-a-day-demos/blob/master/infrastructure/media/sensorprep-cell2-run.png?raw=true)
+    ![Cell 2 is highlighted.](https://github.com/CloudLabsAI-Azure/azure-synapse-in-a-day-demos/raw/master/infrastructure/media/sensorprep-cell2-run.png)
 
 6. When you execute **Cell 10**, change the view to **Chart** in the cell results. Select **View options** and configure the settings as displayed below, then select **Apply**.
 
