--- a/infrastructure/04.md
+++ b/infrastructure/04.md
@@ -34,7 +34,7 @@ Azure Synapse Link for Azure Cosmos DB: (https://docs.microsoft.com/azure/cosmos
 
 4. Select **IoT devices** in the left-hand menu, then select **+Add Device** in the IoT devices blade.
 
-    ![The IoT devices menu item is highlighted, as well as the New button on its blade.](media/iot-devices1.png "IoT devices")
+    ![The IoT devices menu item is highlighted, as well as the New button on its blade.](media/ex4tsk1stp4.png "IoT devices")
 
 5. Enter **vdev01** as the Device ID, select the **Symmetric key** authentication type, **Check** auto-generate key, and **Enable** the option to connect this device to an IoT Hub. Select **Save**.
 
