--- a/infrastructure/03.md
+++ b/infrastructure/03.md
@@ -53,6 +53,10 @@ Power BI reports can be created, edited, and viewed from within Synapse Studio. 
 
     ![The don't summarize menu option is highlighted.](media/pbi-do-not-summarize.png "Don't summarize")
 
+    > **Note**: In case the **Map** doesn't load, navigate to **File > Option and setting > Options > Security**. Scroll down to Map and Filled Map Visuals and check the Use Map and Filled Map Visuals and click on **OK**. 
+    
+        ![The don't summarize menu option is highlighted.](media/mapsettings.png "Don't summarize")
+
 2. Click an empty location on the report area. Under Visualizations, click **Stacked Column Chart**, then use the table below to set the field values.
 
     | Parameters | Settings | Remarks |
