--- a/infrastructure/05.md
+++ b/infrastructure/05.md
@@ -94,7 +94,7 @@ In addition to the traditional SQL data warehouse functionality, Azure Synapse A
 
 4. Select **Get Data**, then select **Azure** in the left-hand menu of the dialog that appears. Select **Azure Synapse Analytics (SQL DW)**, then select **Connect**.
 
-    ![The options are highlighted as described.](media/pbi-get-data.png "Get Data")
+    ![The options are highlighted as described.](media/pbi-get-data-up.png "Get Data")
 
 5. Set the **Server** value to your copied serverless SQL endpoint, and enter **AIAD** for the **Database** name. Select the **DirectQuery** data connectivity mode, then click **OK**.
 
