--- a/infrastructure/05.md
+++ b/infrastructure/05.md
@@ -136,9 +136,9 @@ In addition to the traditional SQL data warehouse functionality, Azure Synapse A
 
     ![The chart is configured as described.](media/pbi-card.png "Card")
 
-11. Click an empty location in the report area. Click **Format** (Paint Roller), and then click **Page refresh off** to turn it on. Set the duration to **1 minute**.
+11. Click an empty location in the report area. Click **Format** (Paint brush), and then click **Page refresh off** to turn it on. Set the duration to **1 minute**.
 
-    ![Auto-refresh is turned on.](media/pbi-refresh.png "Refresh")
+    ![Auto-refresh is turned on.](media/pbi-refresh-up.png "Refresh")
 
 12. Click the **Save** icon on the top-left. Enter **SensorOnDemand** for the file name and click **Save**. You will use this file in a later exercise.
 
